crates/vexor-compiler/tests/golden/error/output/fn_missing_body.err
parse error at line 2, column 13
  |
2 | fn double(x)
  |             ^
expected `=`